--- a/package.json
+++ b/package.json
@@ -33,5 +33,8 @@
     "tailwind-merge": "^1.14.0",
     "tailwindcss": "3.3.3",
     "typescript": "5.1.6"
+  },
+  "devDependencies": {
+    "@grafbase/sdk": "^0.3.0"
   }
 }
