updated: authentication, rules, jwt

--- a/package.json
+++ b/package.json
@@ -22,11 +22,16 @@
     "@types/react-dom": "18.2.7",
     "autoprefixer": "10.4.14",
     "class-variance-authority": "^0.7.0",
+    "cloudinary": "^1.40.0",
     "clsx": "^2.0.0",
     "eslint": "8.46.0",
     "eslint-config-next": "13.4.12",
+    "graphql": "^16.7.1",
+    "graphql-request": "^6.1.0",
+    "jsonwebtoken": "^9.0.1",
     "lucide-react": "^0.263.1",
     "next": "13.4.12",
+    "next-auth": "^4.22.3",
     "postcss": "8.4.27",
     "react": "18.2.0",
     "react-dom": "18.2.0",
