--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@radix-ui/react-dialog": "^1.0.4",
     "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/react-label": "^2.0.2",
+    "@radix-ui/react-popover": "^1.0.6",
     "@radix-ui/react-radio-group": "^1.1.3",
     "@radix-ui/react-scroll-area": "^1.0.4",
     "@radix-ui/react-select": "^1.2.2",
@@ -43,6 +44,7 @@
     "clsx": "^2.0.0",
     "eslint": "8.46.0",
     "eslint-config-next": "13.4.12",
+    "framer-motion": "^10.15.0",
     "graphql": "^16.7.1",
     "graphql-request": "^6.1.0",
     "jsonwebtoken": "^9.0.1",
@@ -56,6 +58,7 @@
     "sonner": "^0.6.2",
     "tailwind-merge": "^1.14.0",
     "tailwindcss": "3.3.3",
+    "tailwindcss-animate": "^1.0.6",
     "tiptap-markdown": "^0.8.2",
     "typescript": "5.1.6",
     "use-debounce": "^9.0.4"
