--- a/package.json
+++ b/package.json
@@ -9,15 +9,10 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@radix-ui/react-alert-dialog": "^1.0.4",
-    "@radix-ui/react-dialog": "^1.0.4",
-    "@radix-ui/react-icons": "^1.3.0",
-    "@radix-ui/react-label": "^2.0.2",
+    "@headlessui/react": "^1.7.16",
+    "@lottiefiles/react-lottie-player": "^3.5.3",
+    "@material-tailwind/react": "^2.0.8",
     "@radix-ui/react-popover": "^1.0.6",
-    "@radix-ui/react-radio-group": "^1.1.3",
-    "@radix-ui/react-scroll-area": "^1.0.4",
-    "@radix-ui/react-select": "^1.2.2",
-    "@radix-ui/react-slot": "^1.0.2",
     "@tailwindcss/typography": "^0.5.9",
     "@tiptap/extension-color": "^2.0.4",
     "@tiptap/extension-highlight": "^2.0.4",
@@ -42,6 +37,7 @@
     "class-variance-authority": "^0.7.0",
     "cloudinary": "^1.40.0",
     "clsx": "^2.0.0",
+    "encoding": "^0.1.13",
     "eslint": "8.46.0",
     "eslint-config-next": "13.4.12",
     "framer-motion": "^10.15.0",
@@ -50,20 +46,24 @@
     "jsonwebtoken": "^9.0.1",
     "lucide-react": "^0.263.1",
     "next": "13.4.12",
-    "next-auth": "^4.22.3",
+    "next-auth": "^4.22.4",
+    "next-mdx-remote": "^4.4.1",
     "postcss": "8.4.27",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-textarea-autosize": "^8.5.2",
+    "react-tweet": "^3.0.4",
     "sonner": "^0.6.2",
     "tailwind-merge": "^1.14.0",
     "tailwindcss": "3.3.3",
     "tailwindcss-animate": "^1.0.6",
     "tiptap-markdown": "^0.8.2",
     "typescript": "5.1.6",
+    "unist-util-visit": "^5.0.0",
     "use-debounce": "^9.0.4"
   },
   "devDependencies": {
-    "@grafbase/sdk": "^0.3.0"
+    "@grafbase/sdk": "^0.3.0",
+    "@types/jsonwebtoken": "^9.0.2"
   }
 }
