update: editor and other ui

--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "next": "13.4.12",
     "next-auth": "^4.22.4",
     "next-mdx-remote": "^4.4.1",
+    "openai-edge": "^1.2.2",
     "postcss": "8.4.27",
     "react": "18.2.0",
     "react-dom": "18.2.0",
